--- a/Mic.Volo.MVCToDo/appsettings.json
+++ b/Mic.Volo.MVCToDo/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"ConnectionStrings": {
+		"DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Integrated Security=True;Initial Catalog=ToDoListMvc"
+	},
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
